@@ -7,3 +7,5 @@ ObjectiveRenderer,40,org.lazywizard.radar.renderers.combat.ObjectiveRenderer,dat
 ShipRenderer,50,org.lazywizard.radar.renderers.combat.ShipRenderer,data/config/radar/radar_settings.json
 AsteroidRenderer,60,org.lazywizard.radar.renderers.combat.AsteroidRenderer,data/config/radar/radar_settings.json
 MissileRenderer,70,org.lazywizard.radar.renderers.combat.MissileRenderer,data/config/radar/radar_settings.json
+,,,
+MemoryUsageRenderer,9999,org.lazywizard.radar.renderers.combat.MemoryUsageRenderer,
